--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1225,7 +1225,7 @@ h1.github {
 }
 
 
-/*det er flere hover med samme kode, må endrs, forksjell er backgorudn color som er viktig å ha med*/
+/*det er flere hover med samme kode, må endrs, forksjell er background color som er viktig å ha med*/
 .small-img-box:hover {
     background-color: var(--beige);
     border-radius: 8px;
