--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,4 @@
-/* CSS Variables: Defining color palette and theme variables */
+/* Defining color palette and theme variables */
 :root {
     --yellow: #ffd500;
     --grey: #3B3941;
