--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,3 +1,23 @@
+/* css has been categorized into rough sections, CTRL+F and search one of following
+to find:
+
+header
+dropdown-menu
+nav
+main
+Video
+course-info-tabs
+more-content
+course-cards
+studies
+studenthistorier
+footer
+github-page
+github page text section
+activity page
+
+*/
+
 /* Defining color palette and theme variables */
 :root {
     --yellow: #ffd500;
@@ -168,7 +188,6 @@ header {
 }
 
 /* nav bar specifically for activity page */
-
 .dropbtn-activity {
     background-color: var(--slide2);
     color: var(--beige);
@@ -234,50 +253,6 @@ header {
     margin-top: 0.9rem;
     width: 4rem;
 }
-
-/* Video ------------------------------------------------------------*/
-.video-container {
-    position: relative;
-
-    /* 16:9 aspect ratio */
-    max-width: 100%;
-    padding-bottom: 56.25%;
-    /* 16:9 aspect ratio */
-    
-    height: 0;
-    overflow: hidden;
-    margin: auto;
-    border-radius: 1.875rem;
-    border: 0.19rem solid var(--yellow);
-    box-shadow: 0rem 0.25rem 1.25rem 0rem rgba(0, 0, 0, 0.112);
-}
-
-@media (max-width: 600px) {
-    .video-container {
-
-        /* <----- 16:9 aspect ratio */
-        max-width: 100%;
-        padding-bottom: 56.25%;
-        /* <----- 16:9 aspect ratio */
-        
-        box-shadow: none;
-        border-radius: 0;
-        border: 0.19rem solid var(--yellow);
-    }
-
-}
-
-iframe {
-    position: absolute;
-    top: -2px;
-    left: 0;
-    width: 100.5%;
-    height: 100.5%;
-    border: none;
-    /* top, width and height adjusted to better fit inside borders. 
-    For some reason the video was slightly smaller than the border, showing small gaps */
-}
-
 
 /* nav ----------------------------------------------- */
 nav {
@@ -388,6 +363,49 @@ main {
 
 #course-short-summary>h2 {
     margin-top: 0;
+}
+
+/* Video ------------------------------------------------------------*/
+.video-container {
+    position: relative;
+
+    /* 16:9 aspect ratio */
+    max-width: 100%;
+    padding-bottom: 56.25%;
+    /* 16:9 aspect ratio */
+    
+    height: 0;
+    overflow: hidden;
+    margin: auto;
+    border-radius: 1.875rem;
+    border: 0.19rem solid var(--yellow);
+    box-shadow: 0rem 0.25rem 1.25rem 0rem rgba(0, 0, 0, 0.112);
+}
+
+@media (max-width: 600px) {
+    .video-container {
+
+        /* <----- 16:9 aspect ratio */
+        max-width: 100%;
+        padding-bottom: 56.25%;
+        /* <----- 16:9 aspect ratio */
+        
+        box-shadow: none;
+        border-radius: 0;
+        border: 0.19rem solid var(--yellow);
+    }
+
+}
+
+iframe {
+    position: absolute;
+    top: -2px;
+    left: 0;
+    width: 100.5%;
+    height: 100.5%;
+    border: none;
+    /* top, width and height adjusted to better fit inside borders. 
+    For some reason the video was slightly smaller than the border, showing small gaps */
 }
 
 /* course-info-tabs ----------------------------------------------------- */
@@ -561,6 +579,89 @@ https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_fade
 
 #tabcontent-btt>button:hover {
     background-color: var(--yellow);
+}
+
+/* more-content ----------------------------------------------------------*/
+
+.more-content-boxes>h2 {
+    margin-bottom: 0.5rem;
+    margin-top: 1.5rem;
+}
+
+.more-content-boxes {
+    margin-bottom: 4rem;
+}
+
+/* course-cards ---------------------------------------------- */
+
+.course-cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.course-glance {
+    margin: 1em;
+}
+
+.course-glance>h3 {
+    margin: 0.5rem 0;
+    color: black;
+
+}
+
+.course-glance-container>svg {
+    margin: 10px;
+}
+
+.course-glance-container {
+    display: flex;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    justify-content: space-between;
+    text-decoration: none;
+    transition: 0.1s all ease;
+    margin: 0 1rem 1rem 0;
+}
+
+@media (max-width: 515px) {
+    .tabcontent {
+        padding: 1em 1em;
+    }
+}
+
+.course-glance-container:hover {
+    background-color: #ffde74;
+    scale: 1.0125;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.course-glance-points>p {
+    margin: 10px;
+    margin-right: 15px;
+    margin-left: 0px;
+    min-width: fit-content;
+    color: black;
+}
+
+.course-glance-points {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 15px;
+    margin-left: 0px;
+}
+
+@media (max-width: 750px) {
+    .course-glance-container {
+        margin: 0 0 0.5rem 0;
+    }
+
+    #other-studies {
+        margin: auto;
+    }
+
+    #Videre-studiemuligheter-ved-OsloMet>#course-glance-container>svg {
+        scale: 2;
+    }
 }
 
 /* studies ----------------------------------------------- */
@@ -845,91 +946,7 @@ ul.media li a {
     text-decoration-thickness: 3px;
 }
 
-
-/* more-content ----------------------------------------------------------*/
-
-.more-content-boxes>h2 {
-    margin-bottom: 0.5rem;
-    margin-top: 1.5rem;
-}
-
-.more-content-boxes {
-    margin-bottom: 4rem;
-}
-
-/* course-cards ---------------------------------------------- */
-
-.course-cards {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.course-glance {
-    margin: 1em;
-}
-
-.course-glance>h3 {
-    margin: 0.5rem 0;
-    color: black;
-
-}
-
-.course-glance-container>svg {
-    margin: 10px;
-}
-
-.course-glance-container {
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    justify-content: space-between;
-    text-decoration: none;
-    transition: 0.1s all ease;
-    margin: 0 1rem 1rem 0;
-}
-
-@media (max-width: 515px) {
-    .tabcontent {
-        padding: 1em 1em;
-    }
-}
-
-.course-glance-container:hover {
-    background-color: #ffde74;
-    scale: 1.0125;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
-}
-
-.course-glance-points>p {
-    margin: 10px;
-    margin-right: 15px;
-    margin-left: 0px;
-    min-width: fit-content;
-    color: black;
-}
-
-.course-glance-points {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: 15px;
-    margin-left: 0px;
-}
-
-@media (max-width: 750px) {
-    .course-glance-container {
-        margin: 0 0 0.5rem 0;
-    }
-
-    #other-studies {
-        margin: auto;
-    }
-
-    #Videre-studiemuligheter-ved-OsloMet>#course-glance-container>svg {
-        scale: 2;
-    }
-}
-
-/* Accessibility Page > */
+/* Accessibility Page -------------------------------------------- */
 .img-accessibility-split {
 
     height: 32rem;
